// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PlaceholderLine Custom color 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#efefef",
        "borderRadius": 3,
        "height": 12,
        "marginBottom": 12,
        "width": "100%",
      },
      Array [
        Object {
          "height": 10,
        },
        Object {
          "backgroundColor": "#000000",
        },
      ],
    ]
  }
/>
`;

exports[`Storyshots PlaceholderLine Custom width 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#efefef",
        "borderRadius": 3,
        "height": 12,
        "marginBottom": 12,
        "width": "30%",
      },
      Array [
        Object {
          "height": 10,
        },
        Object {
          "backgroundColor": "#CFD8DC",
        },
      ],
    ]
  }
/>
`;

exports[`Storyshots PlaceholderLine Default 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#efefef",
        "borderRadius": 3,
        "height": 12,
        "marginBottom": 12,
        "width": "100%",
      },
      Array [
        Object {
          "height": 10,
        },
        Object {
          "backgroundColor": "#CFD8DC",
        },
      ],
    ]
  }
/>
`;

exports[`Storyshots PlaceholderLine Small 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#efefef",
        "borderRadius": 3,
        "height": 12,
        "marginBottom": 12,
        "width": "100%",
      },
      Array [
        Object {
          "height": 5,
        },
        Object {
          "backgroundColor": "#CFD8DC",
        },
      ],
    ]
  }
/>
`;

exports[`Storyshots PlaceholderLine Tiny 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#efefef",
        "borderRadius": 3,
        "height": 12,
        "marginBottom": 12,
        "width": "100%",
      },
      Array [
        Object {
          "height": 2,
        },
        Object {
          "backgroundColor": "#CFD8DC",
        },
      ],
    ]
  }
/>
`;
